[package]
name = "alloy-erc20"
version = "0.4.0"
edition = "2021"
authors = ["leruaa"]
keywords = ["alloy", "ethereum", "erc20"]
categories = ["cryptography::cryptocurrencies", "data-structures"]
license = "MIT"
readme = "./README.md"
documentation = "https://docs.rs/alloy-erc20"
repository = "https://github.com/leruaa/alloy-erc20"
homepage = "https://github.com/leruaa/alloy-erc20"
description = """
Interact with ERC-20 contracts using Alloy.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
known-tokens = []
lru-store = ["dep:lru", "dep:parking_lot"]

[dependencies]
alloy = { version = "0.5", features = [
    "network",
    "providers",
    "transports",
    "transport-http",
    "rpc",
    "rpc-types",
    "rpc-client",
    "contract",
    "sol-types",
] }
futures = "0.3"
bigdecimal = "0.4"
thiserror = "1.0"
once_cell = "1.18"
async-once-cell = "0.5"
async-trait = "0.1"
lru = { version = "0.12", optional = true }
parking_lot = { version = "0.12", optional = true, features = ["arc_lock"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = "0.12"
dotenv = "0.15"


[[example]]
name = "provider_ext"
doc-scrape-examples = true

[[example]]
name = "basic_store"
doc-scrape-examples = true

[[example]]
name = "lazy"
doc-scrape-examples = true
